selfhost/test/lexer/strings_error_unterminated_eof.out
Error at %FILE_NAME%:1:5
Unterminated string:
  String begins at (1:1)
  |  "abc
     ^
  String is terminated at (1:5)
  |  "abc
         ^